change the icon into button

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Technical Documentation</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Bree Serif"
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="all.min.css" />
   </head>
   <body>
     <nav id="navbar">
@@ -56,7 +55,7 @@
           in C# to discuss the meaning of syntax
         </p>
         <pre>
-            <i class="copy fa-regular fa-copy"></i>
+            <input class="copy" type="button" value="Copy" />
             
             <code>using System;
 namespace Hello
@@ -96,9 +95,9 @@ namespace Hello
           The syntax for declaring a variable and assigning a value to it is as
           following :
         </p>
-        <pre><i class="copy fa-regular fa-copy"></i><code>data-type variable-name = value(data) ;</code></pre>
+        <pre><input class="copy" type="button" value="Copy" /><code>data-type variable-name = value(data) ;</code></pre>
         <p>For example :-</p>
-        <pre><i class="copy fa-regular fa-copy"></i><code>int age = 20 ;
+        <pre><input class="copy" type="button" value="Copy" /><code>int age = 20 ;
 string FirstName = "AAA" ;
 string full_name = "AAA BBB" ;
 double _degree = 80.5 ;
@@ -113,9 +112,9 @@ bool male = true ;</code></pre>
           Type casting means turning a certain data from a type to another one.
         </p>
         <p>Syntax for type casting is :-</p>
-        <pre><i class="copy fa-regular fa-copy"></i><code>(data-type) data</code></pre>
+        <pre><input class="copy" type="button" value="Copy" /><code>(data-type) data</code></pre>
         <p>For example :-</p>
-        <pre><i class="copy fa-regular fa-copy"></i><code>double pi = 3.14 ;
+        <pre><input class="copy" type="button" value="Copy" /><code>double pi = 3.14 ;
 int myInt = (int) pi ;
 Console.WriteLine(pi) ; // 3.14
 Console.WriteLine(myInt) ; // 3</code></pre>
@@ -128,9 +127,9 @@ Console.WriteLine(myInt) ; // 3</code></pre>
           Now you are going to learn how to use Console.ReadLine() to get user
           input.
         </p>
-        <pre><i class="copy fa-regular fa-copy"></i><code>Console.ReadLine();</code></pre>
+        <pre><input class="copy" type="button" value="Copy" /><code>Console.ReadLine();</code></pre>
         <p>For example :-</p>
-        <pre><i class="copy fa-regular fa-copy"></i><code>int age ;
+        <pre><input class="copy" type="button" value="Copy" /><code>int age ;
 Console.Write("Enter your age:") ;
 age = Console.ReadLine() ;
 Console.WriteLine("You are " + age + " years old") ;</code></pre>
@@ -142,7 +141,7 @@ Console.WriteLine("You are " + age + " years old") ;</code></pre>
           Booleans are data types that can be used to control whether something
           is true or false(yes or no / on or off).
         </p>
-        <pre><i class="copy fa-regular fa-copy"></i><code>bool male = true ;
+        <pre><input class="copy" type="button" value="Copy" /><code>bool male = true ;
 bool student = true ;
 bool permission_accepted = false ;</code></pre>
       </section>
